<resources>
    <string name="app_name">LoginSignUp</string>W
    <string name="welcome">Welcome!</string>
    <string name="forgot_password"><u>forgot password</u> \n\n</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="mail_id">Mail ID</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="full_name">Full Name</string>
    <string name="pass">Password</string>
    <string name="create_acccount">Create Account</string>
    <string name="maild">Mail ID</string>
    <string name="create">Create Account</string>
    <string name="txtlogin"><u>login</u></string>
</resources>