<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
        android:background="@drawable/background">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120sp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:fontFamily="@font/hel"
        android:textStyle="bold"
        android:textColor="@color/white"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/hel"
        android:gravity="center"
        android:text="@string/login_to_continue"
        android:textColor="#E6F4F4F4"
        android:textStyle="bold">


    </TextView>

    <EditText
        android:id="@+id/txtMailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="230dp"
        android:layout_marginRight="15dp"
        android:hint="@string/mail_id"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#edecf1">

    </EditText>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMailId"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="Password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#edecf1"
        android:fontFamily="@font/hel"

        >

    </EditText>

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_below="@id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/hel"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ForgotPassword"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/hel"
        android:text="@string/login"
        android:backgroundTint="#1f1e26"
        />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textStyle="bold"
        android:fontFamily="@font/hel"/>


</RelativeLayout>